--- a/layout.html
+++ b/layout.html
@@ -24,7 +24,7 @@
 		<P class="label">METAL WORLD</P>
 	</div>
 	<div class="projectgrid">
-		<div class="computer">  <img src="1.jpg" class="project"></div>
+		<div class="computer">  <img src="tech.jpg" class="project"></div>
 		<div class="computer"> <img src="2.png" class="project"> </div>
 		<div class="computer"><img src="3.png" class="project"></div>
 		<div class="computer"> <img src="4.png" class="project"> </div>
