--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 		</ul>
 	</div>
 	<div class="cover">
-		<img src="back.png" class="back">
+		<img src="back.PNG" class="back">
 		<P class="label">METAL WORLD</P>
 	</div>
 	<div class="projectgrid">
-		<div class="computer">  <img src="tech.jpg" class="project"></div>
-		<div class="computer"> <img src="2.png" class="project"> </div>
-		<div class="computer"><img src="3.png" class="project"></div>
-		<div class="computer"> <img src="4.png" class="project"> </div>
-		<div class="computer"> <img src="5.png" class="project"> </div>
-		<div class="computer"> <img src="6.png" class="project"> </div>
-		<div class="computer"><img src="3.png" class="project"></div>
-		<div class="computer"> <img src="4.png" class="project"> </div>
-		<div class="computer"> <img src="5.png" class="project"> </div>
-		<div class="computer"> <img src="6.png" class="project"> </div>
+		<div class="computer">  <img src="1.PNG" class="project"></div>
+		<div class="computer"> <img src="2.PNG" class="project"> </div>
+		<div class="computer"><img src="3.PNG" class="project"></div>
+		<div class="computer"> <img src="4.PNG" class="project"> </div>
+		<div class="computer"> <img src="5.PNG" class="project"> </div>
+		<div class="computer"> <img src="6.PNG" class="project"> </div>
+		<div class="computer"><img src="3.PNG" class="project"></div>
+		<div class="computer"> <img src="4.PNG" class="project"> </div>
+		<div class="computer"> <img src="5.PNG" class="project"> </div>
+		<div class="computer"> <img src="6.PNG" class="project"> </div>
 	</div>
 	<footer class="footer">
 		made by hawau
