--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Layout</title>
 	<link rel="stylesheet" type="text/css" href="layout.css">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<style type="text/css">
 		body{
 			margin: 0 0 0 0;
